fixes wrap paddings testi

--- a/src/sass/layouts/_testimonials.scss
+++ b/src/sass/layouts/_testimonials.scss
@@ -37,7 +37,7 @@
     @media screen and (min-width: 1024px) {
         padding: 65px 104px 110px 88px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1510px) {
         padding: 135px 170px 116px 129px;
     }
 }
